# metaken

./: .gitignore  HANDOVER.md  README.md  justfile  pyproject.toml
data/normalized/: validation_issues.json
docs/: index.html
docs/map/: index.html
src/metaken/: __init__.py  __main__.py  config.py  extract.py  fetch.py  normalize.py  parse.py  report.py  tiles.py  validate.py
viewer/: index.html  package-lock.json  package.json  vite.config.ts
viewer/src/: main.ts
